<resources>
    <string name="app_name">SIS</string>
    <string name="input_login">Введите логин</string>
    <string name="input_password">Введите пароль</string>
    <string name="output_qr">Ваш персональный QR.
        Поднесите его к считывателю для входа в аудиторию.</string>
    <string name="button_qr">Сгенерировать QR</string>
    <string name="logoIN">вход</string>
    <string name="User_field_Email_hint">Email</string>
    <string name="User_field_password_hint">Пароль</string>
    <string name="user_sfedu">projectoffice</string>
    <string name="pass_sfedu">q90h5ju4</string>
</resources>