<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qr_input"
        android:hint="@string/input_login"
        android:padding="12sp"
        android:background="@android:drawable/editbox_background"


        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_qr"
        android:text="@string/button_qr"
        android:layout_marginTop="16sp"


        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qr_output"
        android:layout_marginTop="100sp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qr_output"
        android:layout_marginTop="20sp"
        android:text="@string/output_qr"
        android:textAlignment="center" />

</LinearLayout>