<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_view_result"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/user_field_email"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="300dp"
            android:ems="10"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20sp"
            android:inputType="textPersonName"
            android:layout_below="@id/user_field_email"
            android:hint="@string/User_field_Email_hint"
            />

        <EditText

            android:id="@+id/user_field_password"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_below="@id/user_field_email"
            android:layout_marginTop="0sp"
            android:layout_marginHorizontal="20sp"
            android:hint="@string/User_field_password_hint"

            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_field_password"
            android:text="@string/logoIN"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="20sp"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>